# inky-frame-photo-gallery-cpp

./: .gitignore  CMakeLists.txt  HttpConnection.cpp  HttpConnection.hpp  HttpRequest.cpp  HttpRequest.hpp  LICENSE  main.cpp  wifi_settings.h
src/: HttpConnection.cpp  HttpConnection.hpp  main.cpp
